--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ black = "^24.8.0"
 isort = "^5.13.2"
 mypy = "^1.11.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
+
 [tool.mypy]
 disallow_untyped_defs = true
 warn_return_any = true
