--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^1.11.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
 
 [tool.mypy]
 disallow_untyped_defs = true
